# llmidium

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  docker-compose.yml  prompt  run_container.sh
.cargo/: config.toml
llmidium-system/etc/nixos/: configuration.nix  flake.nix
llmidium-system/etc/nixos/home/: default.nix
llmidium-system/etc/nixos/home/development/: rust.nix
llmidium-system/etc/nixos/hosts/llmidium/: default.nix  hardware-configuration.nix
llmidium-system/etc/nixos/modules/: system.nix
llmidium-system/etc/nixos/users/llmidium/: home.nix  nixos.nix
nixos_config/: flake.nix
src/: broker.rs  clap.rs  main.rs  sse.rs  system.rs  web.rs
src/broker/: server.rs
src/broker/server/: local.rs
src/embed/: instructions
src/embed/prompts/: operate-llmidium  operate-llmidium.desc
src/embed/resources/: fs
src/embed/tools/: instructions  process
src/embed/tools/fs/: chmod  chown  copy  create  delete  info  list  mkdir  move  read  rename  rmdir  write
src/system/: fs.rs  process.rs  prompt.rs
